--- a/Strings/AppResources.bg.resx
+++ b/Strings/AppResources.bg.resx
@@ -4335,4 +4335,152 @@ Would you like to delete it?</comment>
   <data name="Replay.DeleteSelectedReplayAction" xml:space="preserve">
     <value>Изтриване на избрания запис</value>
   </data>
+  <data name="AircraftFilterControl.Country" xml:space="preserve">
+    <value>ДЪРЖАВА</value>
+    <comment>COUNTRY</comment>
+  </data>
+  <data name="AircraftFilterControl.Manufacturer" xml:space="preserve">
+    <value>ПРОИЗВОДИТЕЛ</value>
+    <comment>MANUFACTURER</comment>
+  </data>
+  <data name="AircraftFilterControl.Model" xml:space="preserve">
+    <value>МОДЕЛ</value>
+    <comment>MODEL</comment>
+  </data>
+  <data name="AircraftFilterControl.OnlyFreeRented" xml:space="preserve">
+    <value>Само безплатни/наети</value>
+    <comment>Only Free/Rented</comment>
+  </data>
+  <data name="AircraftFilterControl.ShowOlderAircraft" xml:space="preserve">
+    <value>Показване на стари самолети</value>
+    <comment>Show older aircraft</comment>
+  </data>
+  <data name="AircraftFilterControl.SortBy" xml:space="preserve">
+    <value>Сортиране</value>
+    <comment>Sort By</comment>
+  </data>
+  <data name="AircraftSelectionControl.AircraftCountPlural" xml:space="preserve">
+    <value>{0} самолета</value>
+    <comment>{0} aircraft</comment>
+  </data>
+  <data name="AircraftSelectionControl.AircraftCountSingular" xml:space="preserve">
+    <value>{0} самолета</value>
+    <comment>{0} aircraft</comment>
+  </data>
+  <data name="AircraftSelectionControl.LiveryCountPlural" xml:space="preserve">
+    <value>{0} ливреи</value>
+    <comment>{0} liveries</comment>
+  </data>
+  <data name="AircraftSelectionControl.LiveryCountSingular" xml:space="preserve">
+    <value>{0} ливрея</value>
+    <comment>{0} livery</comment>
+  </data>
+  <data name="AircraftSelectionControl.MiscShort" xml:space="preserve">
+    <value>Разни</value>
+    <comment>Misc.</comment>
+  </data>
+  <data name="AircraftSelectionFooterControl.Operators" xml:space="preserve">
+    <value>ОПЕРАТОРИ</value>
+    <comment>OPERATORS</comment>
+  </data>
+  <data name="ProPlansControl.FailedToRetrieveSubs" xml:space="preserve">
+    <value>Неуспешно извличане на абонаментни планове</value>
+    <comment>Failed to retrieve any subscription plans</comment>
+  </data>
+  <data name="ProPlansControl.MostPopular" xml:space="preserve">
+    <value>Най-популярен</value>
+    <comment>Most Popular</comment>
+  </data>
+  <data name="ProPlansControl.UnauthorizedAccess" xml:space="preserve">
+    <value>Неоторизиран достъп до абонаментните планове</value>
+    <comment>Unauthorized access to subscription plans</comment>
+  </data>
+  <data name="RentSubControl.ActiveCommunity.Description" xml:space="preserve">
+    <value>ЕЖЕДНЕВНИ СЪБИТИЯ И ГРУПОВИ ПОЛЕТИ</value>
+    <comment>DAILY EVENTS AND GROUP FLIGHTS</comment>
+  </data>
+  <data name="RentSubControl.ActiveCommunity.Title" xml:space="preserve">
+    <value>АКТИВНА ОБЩНОСТ</value>
+    <comment>ACTIVE COMMUNITY</comment>
+  </data>
+  <data name="RentSubControl.ExploreTheWorld.Description" xml:space="preserve">
+    <value>САТЕЛИТНИ СНИМКИ С РЕЗОЛЮЦИЯ 15M/PX НА ЦЕЛИЯ СВЯТ</value>
+    <comment>WORLDWIDE HD 15M/PX SATELLITE TERRAIN IMAGERY</comment>
+  </data>
+  <data name="RentSubControl.ExploreTheWorld.Title" xml:space="preserve">
+    <value>ОПОЗНАЙТЕ СВЕТА</value>
+    <comment>EXPLORE THE WORLD</comment>
+  </data>
+  <data name="RentSubControl.Help" xml:space="preserve">
+    <value>Помощ</value>
+    <comment>Help</comment>
+  </data>
+  <data name="RentSubControl.InstrumentProcedures.Description" xml:space="preserve">
+    <value>РЕАЛНИ ГЛОБАЛНИ НАВИГАЦИОННИ ДАННИ</value>
+    <comment>REAL-WORLD GLOBAL NAVIGATION DATA</comment>
+  </data>
+  <data name="RentSubControl.InstrumentProcedures.Title" xml:space="preserve">
+    <value>ПРИБОРНИ ПРОЦЕДУРИ</value>
+    <comment>INSTRUMENT PROCEDURES</comment>
+  </data>
+  <data name="RentSubControl.MessageAircraftLiverySub" xml:space="preserve">
+    <value>Изисква се абонамент, за да летите с {0} ({1})</value>
+    <comment>{0} ({1}) requires a subscription to fly</comment>
+  </data>
+  <data name="RentSubControl.MessageAircraftLiverySubRent" xml:space="preserve">
+    <value>Изисква се абонамент или наем, за да летите с {0} ({1})</value>
+    <comment>{0} ({1}) requires a rental or a subscription to fly</comment>
+  </data>
+  <data name="RentSubControl.MessageGenericSub" xml:space="preserve">
+    <value>Infinite Flight Pro Ви дава достъп до всички самоелти, достъп до целия свят и мутлиплейър</value>
+    <comment>Infinite Flight Pro gives you access to all aircraft, global scenery and multiplayer</comment>
+  </data>
+  <data name="RentSubControl.MoreOptions" xml:space="preserve">
+    <value>Повече опции</value>
+    <comment>More Options</comment>
+  </data>
+  <data name="RentSubControl.MultiplayerWithAtc.Description" xml:space="preserve">
+    <value>ЛЕТЕТЕ С ХИЛЯДИ ДРУГИ ПИЛОТИ И РВД</value>
+    <comment>FLY WITH THOUSANDS OF OTHER PILOTS &amp; ATC</comment>
+  </data>
+  <data name="RentSubControl.MultiplayerWithAtc.Title" xml:space="preserve">
+    <value>МУЛТИПЛЕЙЪР С РВД</value>
+    <comment>MULTIPLAYER WITH ATC</comment>
+  </data>
+  <data name="RentSubControl.RealisticAtmosphere.Description" xml:space="preserve">
+    <value>ОБЛАЦИ, ВЕТРОВЕ НА ВИСОЧИНА, ДЕНОНОЩЕН ЦИКЪЛ И ОЩЕ</value>
+    <comment>CLOUDS, WINDS ALOFT, DAY/NIGHT CYCLE, AND MORE</comment>
+  </data>
+  <data name="RentSubControl.RealisticAtmosphere.Title" xml:space="preserve">
+    <value>РЕАЛИСТИЧНА АТМОСФЕРА</value>
+    <comment>REALISTIC ATMOSPHERE</comment>
+  </data>
+  <data name="AircraftFilterControl.Commercial" xml:space="preserve">
+    <value>ТЪРГОВСКИ</value>
+    <comment>COMMERCIAL</comment>
+  </data>
+  <data name="AircraftFilterControl.EngineType" xml:space="preserve">
+    <value>Тип двигател</value>
+    <comment>Engine Type</comment>
+  </data>
+  <data name="AircraftFilterControl.Jet" xml:space="preserve">
+    <value>РЕАКТИВЕН</value>
+    <comment>JET</comment>
+  </data>
+  <data name="AircraftFilterControl.Military" xml:space="preserve">
+    <value>ВОЕНЕН</value>
+    <comment>MILITARY</comment>
+  </data>
+  <data name="AircraftFilterControl.OperatorType" xml:space="preserve">
+    <value>Тип оператор</value>
+    <comment>Operator Type</comment>
+  </data>
+  <data name="AircraftFilterControl.Piston" xml:space="preserve">
+    <value>БУТАЛЕН</value>
+    <comment>PISTON</comment>
+  </data>
+  <data name="AircraftFilterControl.Turboprop" xml:space="preserve">
+    <value>ТУРБОВИТЛОВ</value>
+    <comment>TURBOPROP</comment>
+  </data>
 </root>
