--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -3580,4 +3580,121 @@ Voulez-vous le supprimer ?</value>
     <value>TURBOPRO</value>
     <comment>TURBOPROP</comment>
   </data>
+  <data name="PauseFlightControl.AutoExit" xml:space="preserve">
+    <value>Sortie Auto</value>
+    <comment>Auto Exit toggle label in pause menu (AutoPilot+ feature)</comment>
+  </data>
+  <data name="PauseFlightControl.AutoExitDescription" xml:space="preserve">
+    <value>Quitte automatiquement le vol
+30 minutes avant la destination
+et continue en AutoPilot+
+si les conditions le permettent.</value>
+    <comment>Auto Exit feature description popup text</comment>
+  </data>
+  <data name="Hud2.FullScreenModeHintLine1" xml:space="preserve">
+    <value>APPUYEZ LONGUEMENT AU CENTRE DE L'ÉCRAN POUR AFFICHER/MASQUER LES CONTRÔLES</value>
+    <comment>Hint shown when entering full screen mode (hide controls)</comment>
+  </data>
+  <data name="Hud2.FullScreenModeHintDroneCamera" xml:space="preserve">
+    <value>LE MOUVEMENT DE LA CAMÉRA DRONE RESTE ACTIF</value>
+    <comment>Secondary hint when in drone camera mode with controls hidden</comment>
+  </data>
+  <data name="Hud2.FullScreenModeHintAileronElevator" xml:space="preserve">
+    <value>LE CONTRÔLE AILERONS/PROFONDEUR RESTE ACTIF</value>
+    <comment>Secondary hint when on-screen controls enabled with controls hidden</comment>
+  </data>
+  <data name="OnScreenJoystickControl.Move" xml:space="preserve">
+    <value>DÉPLACER</value>
+    <comment>Label for camera motion joystick (drone camera left stick)</comment>
+  </data>
+  <data name="OnScreenJoystickControl.Look" xml:space="preserve">
+    <value>REGARDER</value>
+    <comment>Label for camera rotation joystick (drone camera right stick)</comment>
+  </data>
+  <data name="OnScreenJoystickControl.TapToUse" xml:space="preserve">
+    <value>TAPEZ POUR UTILISER</value>
+    <comment>Onboarding hint for on-screen joystick controls</comment>
+  </data>
+  <data name="ControlMethodPopup.SelectControlMode" xml:space="preserve">
+    <value>SÉLECTIONNER LE MODE DE CONTRÔLE</value>
+    <comment>Title of the control method selection popup</comment>
+  </data>
+  <data name="ControlMethodPopup.Tilt" xml:space="preserve">
+    <value>INCLINAISON</value>
+    <comment>Label for tilt/accelerometer control option</comment>
+  </data>
+  <data name="ControlMethodPopup.Touch" xml:space="preserve">
+    <value>TACTILE</value>
+    <comment>Label for on-screen touch joystick control option</comment>
+  </data>
+  <data name="ControlMethodPopup.OK" xml:space="preserve">
+    <value>OK</value>
+    <comment>OK button text in control method popup</comment>
+  </data>
+  <data name="ApplicationSettings.FlightControlInput" xml:space="preserve">
+    <value>Entrée de contrôle de vol</value>
+    <comment>Setting name for flight control input method selection</comment>
+  </data>
+  <data name="ApplicationSettings.FlightControlInputDescription" xml:space="preserve">
+    <value>Choisir comment contrôler l'avion : mouvement ou commandes à l'écran</value>
+    <comment>Setting description for flight control input method selection</comment>
+  </data>
+  <data name="ApplicationSettings.ShowControlMethodPopup" xml:space="preserve">
+    <value>Afficher la fenêtre de sélection du mode de contrôle</value>
+    <comment>Debug setting name for showing control method selection on flight start</comment>
+  </data>
+  <data name="ApplicationSettings.ShowControlMethodPopupDescription" xml:space="preserve">
+    <value>Réinitialiser pour afficher la sélection du mode de contrôle au démarrage du vol</value>
+    <comment>Debug setting description for showing control method selection on flight start</comment>
+  </data>
+  <data name="JoystickPanningArea.ShowingInterfaceInFormat" xml:space="preserve">
+    <value>Affichage de l'interface dans {0}...</value>
+    <comment>Countdown text when long pressing to show hidden controls. {0} is seconds remaining.</comment>
+  </data>
+  <data name="JoystickPanningArea.HidingInterfaceInFormat" xml:space="preserve">
+    <value>Masquage de l'interface dans {0}...</value>
+    <comment>Countdown text when long pressing to hide controls. {0} is seconds remaining.</comment>
+  </data>
+  <data name="Flight Control Input" xml:space="preserve">
+    <value>Mode de contrôle</value>
+    <comment>Settings property name - used as resource key by PropertyGrid</comment>
+  </data>
+  <data name="Choose how to control the aircraft: motion or on-screen controls" xml:space="preserve">
+    <value>Choisir comment piloter : inclinaison ou commandes tactiles</value>
+    <comment>Settings property description - used as resource key by PropertyGrid</comment>
+  </data>
+  <data name="Tilt" xml:space="preserve">
+    <value>Inclinaison</value>
+    <comment>Control mode option - tilt/accelerometer control</comment>
+  </data>
+  <data name="Touch" xml:space="preserve">
+    <value>Tactile</value>
+    <comment>Control mode option - on-screen touch controls</comment>
+  </data>
+  <data name="Show Control Method Popup" xml:space="preserve">
+    <value>Afficher la sélection du mode de contrôle</value>
+    <comment>Debug settings property name - used as resource key by PropertyGrid</comment>
+  </data>
+  <data name="Reset to show control method selection on flight start" xml:space="preserve">
+    <value>Réafficher la sélection du mode de contrôle au démarrage du vol</value>
+    <comment>Debug settings property description - used as resource key by PropertyGrid</comment>
+  </data>
+  <data name="FlightAnalyzer.AutoPilotPlusTitle" xml:space="preserve">
+    <value>Sortie Auto</value>
+    <comment>Title for the Auto Exit confirmation dialog</comment>
+  </data>
+  <data name="FlightAnalyzer.AutoPilotPlusMessage" xml:space="preserve">
+    <value>La Sortie Auto s'activera dans 1 minute si les conditions sont toujours remplies.
+
+Appuyez sur Annuler pour désactiver.</value>
+    <comment>Message for the Auto Exit confirmation dialog</comment>
+  </data>
+  <data name="FlightAnalyzer.AutoPilotPlusOK" xml:space="preserve">
+    <value>OK</value>
+    <comment>OK button for Autopilot+ dialog</comment>
+  </data>
+  <data name="FlightAnalyzer.AutoPilotPlusCancel" xml:space="preserve">
+    <value>ANNULER</value>
+    <comment>Cancel button for Autopilot+ dialog</comment>
+  </data>
 </root>
